analyzer: remove __analyzer builtins
The patch that added __analyzer_* builtins to builtins.def isn't needed:
the functions are only used during DejaGnu testing, and only for
comparison by name during compile-only tests - they're never actually
defined.

This patch eliminates the builtins in favor of a header file in the
DejaGnu testsuite.

gcc/ChangeLog:
	* builtins.def: Delete the analyzer builtins.
	* doc/analyzer.texi (Builtins for Debugging the Analyzer): Rename
	to...
	(Special Functions for Debugging the Analyzer): ...this.  Add a
	leading paragraph.  Document __analyzer_dump_region_model and
	__analyzer_eval.

gcc/testsuite/ChangeLog:
	* gcc.dg/analyzer/abort.c: Include "analyzer-decls.h".
	* gcc.dg/analyzer/analyzer-decls.h: New header.
	* gcc.dg/analyzer/conditionals-2.c: Include "analyzer-decls.h".
	* gcc.dg/analyzer/conditionals-3.c: Likewise.
	* gcc.dg/analyzer/conditionals-notrans.c: Likewise.
	* gcc.dg/analyzer/conditionals-trans.c: Likewise.
	* gcc.dg/analyzer/data-model-1.c: Likewise.
	* gcc.dg/analyzer/data-model-16.c: Likewise.
	* gcc.dg/analyzer/data-model-18.c: Likewise.
	* gcc.dg/analyzer/data-model-5d.c: Likewise.
	* gcc.dg/analyzer/data-model-6.c: Likewise.
	* gcc.dg/analyzer/data-model-7.c: Likewise.
	* gcc.dg/analyzer/data-model-8.c: Likewise.
	* gcc.dg/analyzer/data-model-9.c: Likewise.
	* gcc.dg/analyzer/equivalence.c: Likewise.
	* gcc.dg/analyzer/function-ptr-2.c: Likewise.
	* gcc.dg/analyzer/loop-2.c: Likewise.
	* gcc.dg/analyzer/loop-2a.c: Likewise.
	* gcc.dg/analyzer/loop-4.c: Likewise.
	* gcc.dg/analyzer/loop.c: Likewise.
	* gcc.dg/analyzer/malloc-paths-10.c: Likewise.
	* gcc.dg/analyzer/malloc-vs-local-1a.c: Likewise.
	* gcc.dg/analyzer/malloc-vs-local-1b.c: Likewise.
	* gcc.dg/analyzer/malloc-vs-local-2.c: Likewise.
	* gcc.dg/analyzer/malloc-vs-local-3.c: Likewise.
	* gcc.dg/analyzer/operations.c: Likewise.
	* gcc.dg/analyzer/params-2.c: Likewise.
	* gcc.dg/analyzer/params.c: Likewise.
	* gcc.dg/analyzer/paths-1.c: Likewise.
	* gcc

--- a/gcc/doc/analyzer.texi
+++ b/gcc/doc/analyzer.texi
@@ -433,7 +433,12 @@ Signal handling
 @cindex analyzer, debugging
 @cindex static analyzer, debugging
 
-@subsection Builtins for Debugging the Analyzer
+@subsection Special Functions for Debugging the Analyzer
+
+The analyzer recognizes various special functions by name, for use
+in debugging the analyzer.  Declarations can be seen in the testsuite
+in @file{analyzer-decls.h}.  None of these functions are actually
+implemented.
 
 Add:
 @smallexample
@@ -471,6 +476,18 @@ will dump just the number of nodes, and their IDs.
 @end smallexample
 
 will also dump all of the states within those nodes.
+
+@smallexample
+   __analyzer_dump_region_model ();
+@end smallexample
+will dump the region_model's state to stderr.
+
+@smallexample
+__analyzer_eval (expr);
+@end smallexample
+will emit a warning with text "TRUE", FALSE" or "UNKNOWN" based on the
+truthfulness of the argument.  This is useful for writing DejaGnu tests.
+
 
 @subsection Other Debugging Techniques
 
